<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shanika.expensetracker.Calculator">

        <LinearLayout

            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/gg"
            android:backgroundTintMode="screen"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:weightSum="1"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:id="@+id/back"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|left"
                android:background="@drawable/ic_keyboard_arrow_left_red_900_24dp"
                android:baselineAlignBottom="false"
                android:contextClickable="true"
                android:cropToPadding="false"
                android:elevation="0dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_keyboard_arrow_left_red_900_24dp" />

            <TextView

                android:id="@+id/addingArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:gravity="left|center"
                android:text="Calculator"
                android:textColor="#0c2cbb"
                android:textColorLink="@android:color/holo_orange_dark"
                android:textDirection="firstStrongRtl"
                android:textSize="28sp"
                android:textStyle="bold"
                android:translationY="-7dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="80dp"
            android:background="#ebe6a3" />


        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignLeft="@+id/edt1"
            android:layout_alignStart="@+id/edt1"
            android:layout_below="@+id/edt1"
            android:layout_marginTop="40dp"
            android:text="1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button1"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_toLeftOf="@+id/button3"
            android:text="2"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:text="3"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button1"
            android:layout_alignLeft="@+id/button1"
            android:layout_alignRight="@+id/button1"
            android:layout_alignStart="@+id/button1"
            android:layout_below="@+id/button1"
            android:text="4"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button2"
            android:layout_alignStart="@+id/button2"
            android:layout_below="@+id/button2"
            android:text="5"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button3"
            android:layout_alignStart="@+id/button3"
            android:layout_below="@+id/button3"
            android:text="6"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button7"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignStart="@+id/button4"
            android:layout_below="@+id/button4"
            android:text="7"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button5"
            android:layout_alignStart="@+id/button5"
            android:layout_below="@+id/button5"
            android:text="8"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button9"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button6"
            android:layout_alignStart="@+id/button6"
            android:layout_below="@+id/button6"
            android:text="9"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonadd"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edt1"
            android:layout_alignRight="@+id/edt1"
            android:layout_alignTop="@+id/button3"
            android:layout_marginLeft="46dp"
            android:layout_marginStart="46dp"
            android:layout_toRightOf="@+id/button3"
            android:text="+"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonsub"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/buttonadd"
            android:layout_alignLeft="@+id/buttonadd"
            android:layout_alignRight="@+id/buttonadd"
            android:layout_alignStart="@+id/buttonadd"
            android:layout_below="@+id/buttonadd"
            android:text="-"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonmul"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonC"
            android:layout_alignEnd="@+id/buttonsub"
            android:layout_alignLeft="@+id/buttonsub"
            android:layout_alignRight="@+id/buttonsub"
            android:layout_alignStart="@+id/buttonsub"
            android:layout_below="@+id/buttonsub"
            android:text="*"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button10"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button7"
            android:layout_alignStart="@+id/button7"
            android:layout_below="@+id/button7"
            android:text="."
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button0"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button8"
            android:layout_alignStart="@+id/button8"
            android:layout_below="@+id/button8"
            android:text="0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonC"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button9"
            android:layout_alignStart="@+id/button9"
            android:layout_below="@+id/button9"
            android:text="C"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttondiv"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/buttonmul"
            android:layout_alignLeft="@+id/buttonmul"
            android:layout_alignRight="@+id/buttonmul"
            android:layout_alignStart="@+id/buttonmul"
            android:layout_below="@+id/buttonmul"
            android:text="/"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttoneql"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/buttondiv"
            android:layout_alignLeft="@+id/button10"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/buttondiv"
            android:layout_alignStart="@+id/button10"
            android:layout_marginBottom="32dp"
            android:background="@android:color/darker_gray"
            android:text="="
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>


