<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shanika.expensetracker.Categories">

    <LinearLayout
        android:layout_width="465dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout

            android:id="@+id/topBar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/gg"
            android:backgroundTintMode="screen"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:weightSum="1"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:id="@+id/back"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|left"
                android:background="@drawable/ic_keyboard_arrow_left_red_900_24dp"
                android:baselineAlignBottom="false"
                android:contextClickable="true"
                android:cropToPadding="false"
                android:elevation="0dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_keyboard_arrow_left_red_900_24dp" />

            <TextView

                android:id="@+id/glance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="Categories"
                android:textColor="#0c2cbb"
                android:textColorLink="@android:color/holo_orange_dark"
                android:textDirection="firstStrongRtl"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/add"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|right"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="50dp"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_add_red_900_24dp"
                android:cropToPadding="true"
                android:elevation="0dp"
                android:scaleType="centerCrop"
                android:visibility="visible" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/income"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:background="@drawable/orange"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:text="Income"
                    android:textColor="@android:color/background_dark"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/incomeCatList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_dark"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="85dp"
                android:layout_weight="0.20"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/expense"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/orange"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:text="Expense"
                    android:textColor="@android:color/background_dark"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/expenseCatList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_dark"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    >

</android.support.constraint.ConstraintLayout>
