...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context="com.example.shanika.expensetracker.AddCategory">

    <LinearLayout
        android:id="@+id/whole"
        android:layout_width="0dp"
        android:layout_height="587dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">
...
